--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,35 @@
 @font-face {
   font-family: 'Gilroy';
-  src: url('fonts/gilroylight.woff2') format('woff2'),
-       url('fonts/gilroylight.woff') format('woff'),
-       url('fonts/gilroylight.ttf') format('truetype');
+  src: url('../fonts/gilroylight.woff2') format('woff2'),
+       url('../fonts/gilroylight.woff') format('woff'),
+       url('../fonts/gilroylight.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('fonts/gilroyextrabold.woff2') format('woff2'),
-       url('fonts/gilroyextrabold.woff') format('woff'),
-       url('fonts/gilroyextrabold.ttf') format('truetype');
+  src: url('../fonts/gilroyextrabold.woff2') format('woff2'),
+       url('../fonts/gilroyextrabold.woff') format('woff'),
+       url('../fonts/gilroyextrabold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('fonts/opensans.woff2') format('woff2'),
-       url('fonts/opensans.woff') format('woff'),
-       url('fonts/opensans-regular.ttf') format('truetype');
+  src: url('../fonts/opensans.woff2') format('woff2'),
+       url('../fonts/opensans.woff') format('woff'),
+       url('../fonts/opensans-regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('fonts/opensanslight.woff2') format('woff2'),
-       url('fonts/opensanslight.woff') format('woff'),
-       url('fonts/opensans-light.ttf') format('truetype');
+  src: url('../fonts/opensanslight.woff2') format('woff2'),
+       url('../fonts/opensanslight.woff') format('woff'),
+       url('../fonts/opensans-light.ttf') format('truetype');
   font-weight: lighter;
   font-style: normal;
 }
@@ -43,20 +43,35 @@ body {
   letter-spacing: 0.01em;
 }
 
-h1, h2, h3 {
-  font-family: Gilroy, sans-serif;
+.container {
+  width: 1160px;
+  margin: 0 auto;
+}
+
+.header {
+  font-family: 'Gilroy', sans-serif;
   font-weight: bold;
   letter-spacing: 0.01em;
   font-size: 47px;
   line-height: 1.2em;
 }
 
-.catalog-item h3 {
+.header-small {
   font-size: 18px;
 }
 
+.header-small a {
+  font-family: inherit;
+  font-weight: inherit;
+  text-decoration: none;
+}
+
+.hidden-header {
+  font-size: 0;
+}
+
 .btn {
-  font-family: Gilroy, sans-serif;
+  font-family: 'Gilroy', sans-serif;
   font-weight: bold;
   font-size: 18px;
   line-height: 22px;
