Частый из семейства - дополнение

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 .btn {
-  font-family: 'Gilroy', sans-serif;
+  font-family: 'Gilroy', Arial, sans-serif;
   font-weight: bold;
   font-size: 18px;
   line-height: 22px;
