--- a/css/style.css
+++ b/css/style.css
@@ -73,14 +73,15 @@ body {
 
 .header-small a {
   font: inherit;
+  color: #000000;
   text-decoration: none;
 }
 
 .btn {
   display: block;
+  position: relative;
   border: none;
   background: none;
-  background-image: linear-gradient(to top, transparent 16px, #f0c52e 16px, #f0c52e 24px, transparent 24px);
   height: 40px;
   padding: 0;
   margin: 0;
@@ -95,9 +96,22 @@ body {
   line-height: 2.1em;
 }
 
-.btn:hover,
-.btn:active {
-  background-image: linear-gradient(to top, #f0c52e 0%, #f0c52e 100%);
+.btn::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 8px;
+  background-color: #f0c52e;
+  top: 16px;
+  right: 0;
+  z-index: -1;
+  transform: scaleY(1);
+  transition: transform 0.3s ease-out;
+}
+
+.btn:hover::after,
+.btn:active::after {
+  transform: scaleY(5);
 }
 
 .btn:active {
@@ -126,13 +140,17 @@ body {
 
 .add-to-comparison {
   font-family: 'Open Sans', Tahoma, sans-serif;
-  opacity: 0.5;
+  color: rgba(0, 0, 0, 0.5);
   border: none;
   background: none;
 }
 
 .add-to-comparison:hover, .add-to-comparison:focus {
-  opacity: 1;
+  color: #000000;
+}
+
+.add-to-comparison:active {
+  color: rgba(0, 0, 0, 0.2);
 }
 
 .label-form, .label-sort {
@@ -142,4 +160,15 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000
+}
+
+.partners a img {
+  filter: grayscale(1);
+  opacity: 0.2;
+}
+
+.partners a:hover img,
+.partners a:active img {
+  filter: grayscale(0);
+  opacity: 1;
 }
