--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,9 @@ a {
 .main-nav ul {
   display: flex;
   align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .main-nav .logo {
@@ -290,10 +293,9 @@ a {
 .main-nav-submenu ul {
   position: absolute;
   display: none; /* display: flex; для отображения подменю */
-  flex-direction: column;
   flex-wrap: wrap;
   width: 1160px;
-  height: 130px;
+  min-height: 130px;
   left: -60px;
   align-content: flex-start;
   background-color: #f7e296;
@@ -308,7 +310,9 @@ a {
   opacity: 0.3;
 }
 
-.main-nav-submenu li {
+.main-nav-submenu-column {
+  display: flex;
+  flex-direction: column;
   align-self: flex-start;
   width: 160px;
   margin-left: 60px;
@@ -316,24 +320,12 @@ a {
   line-height: 36px;
 }
 
-.main-nav-submenu li:nth-child(1),
-.main-nav-submenu li:nth-child(2),
-.main-nav-submenu li:nth-child(3) {
+.main-nav-submenu-column:first-of-type {
   width: 200px;
-}
-
-.main-nav-submenu li:nth-child(5) {
-  min-height: 60px;
 }
 
 .main-nav .label {
   font-size: 18px;
-}
-
-.main-nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
 
 .main-nav > ul > li:nth-child(2) {
