--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,15 @@ a {
   color: rgba(0, 0, 0, 0.3);
 }
 
+.search-form input[type="search"]:-ms-input-placeholder {
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .search-form input[type="search"]:hover::placeholder {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.search-form input[type="search"]:hover:-ms-input-placeholder {
   color: rgba(0, 0, 0, 0.6);
 }
 
@@ -815,6 +823,12 @@ a {
 
 /*---Модальное окно---*/
 
+@keyframes appear {
+  0% { transform: translateX(200%) scale(0.001); opacity: 0 }
+  65% { transform: translateX(-60%) translateY(-50%) scale(1.02); opacity: 1 }
+  100% { transform: translateX(-50%) translateY(-50%) scale(1); opacity: 1 }
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -828,6 +842,9 @@ a {
 
 .modal-show {
   display: flex;
+  animation-name: appear;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
 }
 
 .modal .modal-close {
@@ -906,6 +923,11 @@ a {
 
 .modal-write-us input::placeholder,
 .modal-write-us textarea::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-write-us input:-ms-input-placeholder,
+.modal-write-us textarea:-ms-input-placeholder {
   color: rgba(0, 0, 0, 0.4);
 }
 
