--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ a {
   font-size: 18px;
   letter-spacing: 3.6px;
   text-transform: uppercase;
-  line-height: 2.1em;
+  line-height: 2.15em;
   color: #000000;
   z-index: 1;
   cursor: pointer;
@@ -825,8 +825,13 @@ a {
 
 @keyframes appear {
   0% { transform: translateX(200%) scale(0.001); opacity: 0 }
-  65% { transform: translateX(-60%) translateY(-50%) scale(1.02); opacity: 1 }
+  65% { transform: translateX(-60%) translateY(-50%) scale(1.05); opacity: 1 }
   100% { transform: translateX(-50%) translateY(-50%) scale(1); opacity: 1 }
+}
+
+@keyframes error {
+  0% { box-shadow: inset 0 0 0 8px rgba(240, 0, 0, 1); }
+  100% { box-shadow: inset 0 0 0 0 rgba(255, 0, 0, 0); }
 }
 
 .modal {
@@ -836,7 +841,6 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #ffffff;
-  filter: drop-shadow(0 10px 20px rgba(4, 6, 6, 0.2));
   z-index: 1000;
 }
 
@@ -845,6 +849,12 @@ a {
   animation-name: appear;
   animation-duration: 0.5s;
   animation-timing-function: ease;
+}
+
+.modal-error {
+  animation-name: error;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
 }
 
 .modal .modal-close {
@@ -878,6 +888,10 @@ a {
   padding-right: 100px;
   padding-top: 95px;
   padding-bottom: 80px;
+  box-shadow:
+    -40px 0 40px -40px rgba(4, 6, 6, 0.8),
+    40px 0 40px -40px rgba(4, 6, 6, 0.8),
+    0 10px 20px 0 rgba(4, 6, 6, 0.2);
 }
 
 .modal-write-us p {
