--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,10 @@ a {
   position: relative;
   border: 0;
   background: none;
-  height: 40px;
-  padding: 0;
   margin: 0;
+  padding: 0;
   margin-left: 3px;
+  padding-bottom: 1px;
   text-align: center;
   font-family: 'Gilroy', Arial, sans-serif;
   font-weight: bold;
@@ -136,13 +136,13 @@ a {
   position: absolute;
   content: "";
   width: 100%;
-  height: 8px;
+  height: 100%;
   background-color: #f0c52e;
-  top: 16px;
+  top: 0;
   right: 3px;
   z-index: -2;
-  -webkit-transform: scaleY(1);
-          transform: scaleY(1);
+  -webkit-transform: scaleY(0.2);
+          transform: scaleY(0.2);
   -webkit-transition: -webkit-transform 0.3s ease-out;
   transition: -webkit-transform 0.3s ease-out;
   transition: transform 0.3s ease-out;
@@ -151,8 +151,8 @@ a {
 
 .btn:hover::after,
 .btn:active::after {
-  -webkit-transform: scaleY(5);
-          transform: scaleY(5);
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
 }
 
 .btn:active {
@@ -707,7 +707,7 @@ a {
 
 .services-slider {
   margin-bottom: 94px;
-  padding-bottom: 70px;
+  padding-bottom: 68px;
   background-image: linear-gradient(to bottom, transparent 100px, #e5e5e5 100px);
 }
 
@@ -791,7 +791,7 @@ a {
   content: "";
   position: absolute;
   width: 278px;
-  height: 40px;
+  height: 100%;
   top: 0;
   left: -3px;
   -webkit-transform: none;
@@ -1624,7 +1624,7 @@ a {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  margin-bottom: 32px;
+  margin-bottom: 30px;
 }
 
 .main-footer a {
@@ -1696,7 +1696,7 @@ a {
 }
 
 .footer-menu-section {
-  margin-bottom: 60px;
+  margin-bottom: 62px;
 }
 
 .footer-menu-section a:not(:nth-child(3n)) {
